--- a/aula10/ex006.html
+++ b/aula10/ex006.html
@@ -17,16 +17,25 @@
     </style>
 </head>
 <body>
-    <div id="area" onclick="clicar()"onmouseenter="entrar()">
+    <div id="area">
         Iteraja...
     </div>
     <script>
+        var a = window.document.getElementById('area')
+        a.addEventListener('click', clicar)
+        a.addEventListener('mouseenter', entrar)
+        a.addEventListener('mouseout', sair)
+
         function clicar() {
-            var a = window.document.getElementById('area')
             a.innerText = 'clicou!'
+            a.style.background ='red'
         }
         function entrar() {
-            
+            a.innerText = 'entrou'
+        }
+        function sair() {
+            a.innerText ='saiu'
+            a.style.background ='green'
         }
     </script>
 </body>
