--- a/aula10/ex007.html
+++ b/aula10/ex007.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Somando números</title>
+    <style>
+        body {
+            font: normal 18pt arial;
+
+        }
+        input{
+            font: normal 18pt arial;
+            width: 100px;
+        }
+        div {
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
     <h1>Somando valores</h1>
