--- a/aula011/index_pais.html
+++ b/aula011/index_pais.html
@@ -12,14 +12,14 @@
     <div id="res"></div>
 
     <script>
-      function caucular () {
+      function () {
         var pais = window.document.querySelector('input#local')
         var res = window.document.querySelector(' div#res')
         res.innerHTML = (`Seu pais atual é ${pais}`)
         if ( pais == USD ) {
-            res.innerHTML += (`Voce é estrangeiro`)
+            res.innerHTML  (`Voce é estrangeiro`)
         }else 
-        res.innerHTML += (`<p>Voce é brasileiro</p>`)
+        res.innerHTML  (`<p>Voce é brasileiro</p>`)
       }
     </script>
   </body>
