--- a/modelo/index.html
+++ b/modelo/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Identificador de idade</title>
+    <title>Tabuada</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <header>
-        <h1></h1>
+        <h1>Tabuada</h1>
     </header>
     <section>
         <div>
-            
+            <p>Numero: <input type="number" name="num" id="txtn"> <input type="button" value="Gerar Tabuada" onclick="tabuada()"></p>
         </div>
-        <div id="res">
-           
+        <div>
+           <select name="tabuada" id="seltab" size="10">
+            <option>Digite um numero acima</option>
+           </select>
         </div>
     </section>
     <footer>
